Wrote v1 of the index.html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,25 @@
           - Switch out your lorem ipsum for Hipster Ipsum (https://hipsum.co/)
           - In your contact me section, make the text "Phone:" and "Email:" bolded
      -->
+
+     <div>
+      <h1>Aaron Canales</h1>
+      <h2>Software Developer</h2>
+      <hr>
+      <p>My <i>favorite</i> thing about programming is problem solving</p>
+      <img src="./images/coding-portfolio.jpeg" alt="Conde on a screen">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga aut facilis error et, quae quos id culpa reprehenderit soluta consequatur iure aperiam a vel obcaecati ex alias dolorem officiis sint.</p>
+      <h3>My Projects</h3>
+      <ol>
+        <li>Project 1</li>
+        <li>Project 2</li>
+        <li>Project 3</li>
+      </ol>
+      <h3>Contact Me</h3>
+      <p>Phone: 510-555-5555</p>
+      <a href="mailto:fake@email.com">fake@email.com</a>
+     </div>
+
 </body>
 
 </html>
