add new images and edit index and css files

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -39,6 +40,9 @@
       <hr>
       <p>My <i>favorite</i> thing about programming is problem solving</p>
       <img src="./images/coding-portfolio.jpeg" alt="Conde on a screen">
+      <img src="./images/CSS3.png" alt="css logo">
+      <img src="./images/html.png" alt="html logo">
+      <img src="./images/javascript.png" alt="js logo">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga aut facilis error et, quae quos id culpa reprehenderit soluta consequatur iure aperiam a vel obcaecati ex alias dolorem officiis sint.</p>
       <h3>My Projects</h3>
       <ol>
